k8s/service.yml
 apiVersion: v1
kind: Service
metadata:
  name: k8s-jquery-svc
  namespace: jquery
spec:
  selector:
    app: jquery
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
