k8s/grafana-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.avasaramaa.online
    http:
      paths:
      -  backend:
          serviceName:  grafana
          servicePort: 80
